--- a/scss/style.scss
+++ b/scss/style.scss
@@ -356,17 +356,23 @@ body {
 	margin-bottom: 18px;
 }
 .coursec_container {
+	margin-top: 40px;
 	display: flex;
 	justify-content: space-between;
 }
+.courses_card:not(:last-child) {
+	margin-right: 20px;
+}
 .courses_card {
 	max-width: 350px;
+	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	box-shadow: 0 0 20px rgba(62, 61, 59, .1);
 	border-radius: 5px;
 	
+
 	.page_title_h2 {
 		margin: 30px 10px 15px;
 		text-align: center;
@@ -724,8 +730,17 @@ body {
 
 
 @media (max-width: 1199px) {
+	.header__section_top {
+		.logo_container {
+			margin-left: -13px;
+		}
+	}
+	
 	.nav {
 		display: none;
+	}
+	.wrapper {
+		margin: 0 20px;
 	}
 	.free_trial {
 		display: none;
@@ -745,40 +760,50 @@ body {
 	.teacher_2, .teacher_3 {
 		display: none;
 	}
-}
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	.coursec_container {
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+	.blog_cards {
+		flex-direction: column;
+		align-items: center;
+		margin: 0 20px;
+	}
+	.blog_cards__card_small {
+		margin-top: 20px;
+		width: 540px;
+		height: 356px;
+		background-size: cover;
 
+		.page_title_h2, .page_text_18px {
+		
+			color: white;
+			text-transform: none;
+		}
+		.page_title_h3 {
+			font:bold 24px/33px 'Noto sans';
+			margin-top: 90px;
+		}
+		.page_text_14px {
+			font: 18px/25px 'Noto sans';
+			margin-top: 14px;
+		}
+	}
+}
+
+@media (max-width: 780px) {
+	.courses_card {
+		margin-right: 0px;
+	}
+	.coursec_container {
+		flex-wrap: nowrap;
+		flex-direction: column;
+		align-items: center;
+	}
+}
+@media (max-width: 580px) {
+	.blog_cards__card_small, .blog_cards__card_big {
+		width: 95%;
+		margin: 20px auto 0;
+	}
+}
