--- a/css/style.css
+++ b/css/style.css
@@ -766,6 +766,10 @@ body {
     justify-content: space-around;
   }
 
+  .containeer_lesson_card {
+    flex-wrap: wrap;
+  }
+
   .blog_cards {
     flex-direction: column;
     align-items: center;
@@ -789,6 +793,22 @@ body {
   .blog_cards__card_small .page_text_14px {
     font: 18px/25px "Noto sans";
     margin-top: 14px;
+  }
+
+  .conteiner_form {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .section_title_connection {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section_title_connection .connection_list {
+    padding-left: 0;
+    border-left: 0 solid transparent;
+    border-top: 10px solid #FBDB1C;
   }
 }
 @media (max-width: 780px) {
