--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,9 @@ body {
   .header__section_top .logo_container {
     margin-left: -13px;
   }
+  .header__section_top .free_trial {
+    display: none;
+  }
 
   .nav {
     display: none;
@@ -735,10 +738,6 @@ body {
 
   .wrapper {
     margin: 0 20px;
-  }
-
-  .free_trial {
-    display: none;
   }
 
   .welcom_section_bot__img {
@@ -826,5 +825,28 @@ body {
   .blog_cards__card_small, .blog_cards__card_big {
     width: 95%;
     margin: 20px auto 0;
+  }
+
+  .page_title_h1 {
+    font: bold 24px/33px "Noto Sans";
+  }
+
+  .page_title_h2 {
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+  .page_title_h3 {
+    font-size: 12px;
+    line-height: 17px;
+  }
+
+  .page_text_18px {
+    font: 12px/17px "Noto Sans";
+  }
+
+  .page_text_14px {
+    font-size: 10px;
+    line-height: 12px;
   }
 }
